Bug 140623 - Fileopen DOCX: Text Orientation of X-Axis 0 instead of 45 degrees
Summary: Fileopen DOCX: Text Orientation of X-Axis 0 instead of 45 degrees
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0 target:7.1.5
Keywords: bibisected, bisected, regression
: 142385 (view as bug list)
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2021-02-23 14:14 UTC by Timur
Modified: 2022-01-05 14:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The example file in Word 2019 and yesterdays nightly 7.2 (141.69 KB, image/png)
2021-02-23 15:05 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2021-02-23 14:14:28 UTC
Text orientation of x-axis lables is 0° and not 45° as im MSO Docx. 
Regression, ok in 7.0, nok in 7.1.
Comment 1 Timur 2021-02-23 14:17:22 UTC Comment hidden (me-too)
Comment 2 Timur 2021-02-23 14:22:03 UTC
File is attachment 147704 [details] from bug 122225.

Another example with probably this issue is attachment 82546 [details] from bug 103981 that was closed as WFM without reverse bibisect and UI test.
Comment 3 NISZ LibreOffice Team 2021-02-23 15:04:47 UTC
Confirming with:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 385808a2dff7300ec0120fdd5e8acfad8f86e50d
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL

Sounds like bug #138773 except: that ones example file is now fixed, this one is still bad.
Comment 4 NISZ LibreOffice Team 2021-02-23 15:05:29 UTC
Created attachment 170002 [details]
The example file in Word 2019 and yesterdays nightly 7.2
Comment 5 Xisco Faulí 2021-02-23 15:59:30 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=21620f9d2f50e66dffc45a5afb539edb8d54434c

author	Tünde Tóth <toth.tunde@nisz.hu>	2020-11-23 15:05:24 +0100
committer	László Németh <nemeth@numbertext.org>	2020-11-24 10:44:54 +0100
commit 21620f9d2f50e66dffc45a5afb539edb8d54434c (patch)
tree cb1f5ebdefb9053ac987b058f42c6094420249bc
parent 3be5e428d669accd841949662d601a6f6e1cdb3f (diff)
tdf#138194 Chart OOXML import: set text break to true

Bisected with: bibisect-linux64-7.2

Adding Cc: to Tünde Tóth
Comment 6 Commit Notification 2021-06-10 13:04:31 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6185d1ff0130b3d178d5e50eeb6944ab70db41f9

tdf#140623 Chart OOXML import: set text overlap to false

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Tünde Tóth 2021-06-10 13:38:52 UTC
*** Bug 142328 has been marked as a duplicate of this bug. ***
Comment 8 Tünde Tóth 2021-06-11 08:02:22 UTC
*** Bug 142385 has been marked as a duplicate of this bug. ***
Comment 9 Timur 2021-06-11 10:58:02 UTC
Thanks, Verified for DOCX attachment 147704 [details] from bug 122225 (which has bug 130587 for Y title position) and XLSX from bug 142385.

Seems like DOCX attachment 82546 [details] from bug 103981 is a different issue. Chart on page 1 is regression from 7.1.
Comment 10 Commit Notification 2021-06-11 11:01:26 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/170f257ea5e3375257355def8bd7e998135ad98a

tdf#140623 Chart OOXML import: set text overlap to false

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2021-11-02 09:33:17 UTC
*** Bug 142328 has been marked as a duplicate of this bug. ***
Comment 12 Timur 2022-01-05 14:21:59 UTC
(In reply to Timur from comment #9)
> Seems like DOCX attachment 82546 [details] from bug 103981 is a different
> issue. Chart on page 1 is regression from 7.1.

Opened as bug 142794.