tdf#140623 Chart OOXML import: set text overlap to false

of category axis label unless the rotation is 0 in xml.

Regression from commit: 21620f9d2f50e66dffc45a5afb539edb8d54434c
(tdf#138194 Chart OOXML import: set text break to true)

Change-Id: I18db7483f49c84a83760200037f8858a3b471994
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116575
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 6185d1ff0130b3d178d5e50eeb6944ab70db41f9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116905
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>