oox/source/drawingml/chart/axisconverter.cxx
@@ -271,10 +271,12 @@ void AxisConverter::convertFromModel(const Reference<XCoordinateSystem>& rxCoord
                 }
                 else
                 {
-                    // do not overlap text when the rotation is undefined in xml
-                    bool bTextOverlap
-                        = mrModel.mxTextProp.is()
-                          && mrModel.mxTextProp->getTextProperties().moRotation.has();
+                    // do not overlap text unless the rotation is 0 in xml
+                    bool bTextOverlap = false;
+                    if (mrModel.mxTextProp.is()
+                        && mrModel.mxTextProp->getTextProperties().moRotation.has())
+                        bTextOverlap
+                            = mrModel.mxTextProp->getTextProperties().moRotation.get() == 0;
                     aAxisProp.setProperty(PROP_TextOverlap, bTextOverlap);
                     /* do not break text into several lines unless the rotation is 0 degree,
                        or the rotation is 90 degree and the inner size of the chart is not fixed,
